src/components/header-bar/Menu.css
/* Position and sizing of burger button */
.bm-burger-button {
  position: relative;
  text-align: center;
  width: 40px;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 40px;
  width: 40px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: #4f2119;
}

/*
Sidebar wrapper styles
Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
*/
.bm-menu-wrap {
  position: fixed;
  height: 100%;
  top: 0;
}

/* General sidebar styles */
.bm-menu {
  background: #e18258;
  border-left: 8px solid #4f2119;
  padding: 2.5em 1.5em 0;
  font-size: 1.15em;
}

.bm-menu a {
  color: #4f2119;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: #b8b7ad;
}

/* Individual item */
.bm-item {
  display: inline-block;
  font-weight: 700;
  margin: 0.5em;
  padding: 0;
}

.bm-item, .bm-item a {
  background: transparent;
  border: none;
  color: #4f2119;
  cursor: pointer;
  text-decoration: none;
}

.bm-item:active, .bm-item a:active, .bm-item:focus, .bm-item a:focus, .bm-item:hover, .bm-item a:hover {
  color: #f9fafa;
  outline: 0;
}

/* Styling of overlay */
.bm-overlay {
  background: rgba(0, 0, 0, 0.3);
}

@media only screen and (min-width: 768px) {
  .bm-burger-button {
    margin: 0.5em;
    width: 54px;
  }
}

@media only screen  and (min-width : 1224px) {
  .bm-burger-button {
    width: 57px;
  }

  .bm-menu {
    font-size: 1em;
  }

  .bm-item {
    margin: 0.5em 0;
  }
}

